# CHAMELEON-ZK

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LEARNING_LOG.md  LICENSE  README.md  deployment_addresses.txt  docker-compose.yml  package-lock.json
.github/workflows/: ci-minimal.yml  code-quality-minimal.yml  code-quality.yml  deploy.yml  docs.yml
.github/workflows-backup/: benchmark.yml  ci.yml
benchmarks/: run_benchmarks.sh
benchmarks/results/: Comparison.md  benchmark_20260319_144230.txt  benchmark_20260319_145214.txt  benchmark_20260401_100824.txt  benchmark_20260408_093749.txt  benchmark_20260408_103702.txt  benchmark_20260416_095409.txt
circuits/: generate_morph_inputs.js  morph_validator.circom  package-lock.json  state_commitment.circom
config/: config.json
contracts/: foundry.toml  gas_report.txt
contracts/script/: Deploy.s.sol
docs/: ARCHITECTURE.md  LEARNING_LOG.md  SECURITY.md  STATE_MIGRATION.md
monitoring/: alerts.yml  prometheus.yml
prover/: Cargo.toml  proof.json
prover/output/proofs/: test.json
prover/src/: benchmark.rs  bls12_381_backend.rs  bn254_backend.rs  circuit.rs  cli.rs  config.rs  error.rs  export.rs  lib.rs  main.rs  morph.rs  simulator.rs  types.rs
scripts/: auto_morph.sh  auto_morph_back.sh  dashboard.sh  deploy.sh  diagnose_verifiers.sh  full_demo.sh  integration_test.sh  morph_demo.sh  proof_size.sh  redeploy_two_verifiers.sh  test_edge_cases.sh  test_migration.sh  threat_simulator.sh  verify_all.js  verify_all.sh  verify_onchain.sh  verify_onchain_v2.sh
simulator/: threat_config.json
(+15 files in other folders)
