[package]
name = "chameleon-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# Arkworks core
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"

# Proof systems
ark-groth16 = "0.4"
ark-snark = "0.4"

# Curves
ark-bn254 = "0.4"
ark-bls12-381 = "0.4"

# Utilities
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-groth16/parallel"]

[profile.release]
lto = true
codegen-units = 1