[package]
name = "chameleon-prover"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Pranav-1116/chameleon-zk"

[dependencies]
# Arkworks core
 
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-relations = "0.5.1"
ark-r1cs-std = "0.5"

# Proof systems
ark-groth16 = "0.5"
ark-snark = "0.5.1"

# Curves
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"

# Utilities
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-groth16/parallel"]

[profile.release]
lto = true
codegen-units = 1




[profile.dev]
opt-level = 1  # Faster dev builds

[[bin]]
name = "chameleon-zk"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"